
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 void* a ;
 void* b ;

h1(const int x, int y) {
 h1(a,b);
 h1(b,a);
 return x + y;
}
