; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_front.c_h1.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_front.c_h1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@a = common dso_local global i8* null, align 8
@b = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @h1(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** @a, align 8
  %6 = ptrtoint i8* %5 to i32
  %7 = load i8*, i8** @b, align 8
  %8 = ptrtoint i8* %7 to i32
  %9 = call i32 @h1(i32 %6, i32 %8)
  %10 = load i8*, i8** @b, align 8
  %11 = ptrtoint i8* %10 to i32
  %12 = load i8*, i8** @a, align 8
  %13 = ptrtoint i8* %12 to i32
  %14 = call i32 @h1(i32 %11, i32 %13)
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = add nsw i32 %15, %16
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
